@@ -378,6 +378,11 @@ namespace tgui
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @internal
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void keyPressed(const sf::Event::KeyEvent& event) override;
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @internal
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         void mouseNoLongerOnWidget() override;
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -454,6 +459,7 @@ namespace tgui
         SignalChildWindow onClose      = {"Closed"};        ///< The window was closed. Optional parameter: pointer to the window
         SignalChildWindow onMinimize   = {"Minimized"};     ///< The window was minimized. Optional parameter: pointer to the window
         SignalChildWindow onMaximize   = {"Maximized"};     ///< The window was maximized. Optional parameter: pointer to the window
+        SignalChildWindow onEscapeKeyPressed = {"EscapeKeyPressed"}; ///< The escape key was pressed while the child window was focused. Optional parameter: pointer to the window
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
